--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "twilio": "^5.10.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
